🔧 fix: Actualizar vercel.json con configuración builds/routes
- Cambio de buildCommand a configuración builds/routes
- src: flynn-app/package.json para detectar Next.js correctamente
- routes: redirige todo el tráfico a flynn-app/
- Debería resolver problema de detección de Next.js

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,17 @@
 {
-  "buildCommand": "cd flynn-app && npm run build",
-  "devCommand": "cd flynn-app && npm run dev", 
-  "installCommand": "cd flynn-app && npm install",
-  "framework": "nextjs",
-  "outputDirectory": "flynn-app/.next"
+  "builds": [
+    {
+      "src": "flynn-app/package.json",
+      "use": "@vercel/next",
+      "config": {
+        "distDir": ".next"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "flynn-app/$1"
+    }
+  ]
 }
