--- a/flynn-app/package.json
+++ b/flynn-app/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "gif.js": "^0.2.0",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
