Remove HSL animations and implement saved configurations system
- Remove hslRainbow and hslGradientFlow animations (complex HSL system)
- Implement comprehensive saved configurations system with localStorage and Vercel KV
- Add SaveConfigModal and ConfigurationsPanel components
- Create API routes for config management (/api/configs/*)
- Add ConfigurationManager utility class
- Update animation system to work without HSL animations
- Add SAVED_CONFIGS_SETUP.md documentation for Vercel KV setup

--- a/flynn-app/package.json
+++ b/flynn-app/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@types/lodash": "^4.17.17",
+    "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "gif.js": "^0.2.0",
