--- a/flynn-app/package.json
+++ b/flynn-app/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@types/lodash": "^4.17.17",
+    "@types/pako": "^2.0.3",
     "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
@@ -21,6 +22,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "pako": "^2.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
