--- a/flynn-app/package.json
+++ b/flynn-app/package.json
@@ -14,43 +14,52 @@
   "dependencies": {
     "@headlessui/react": "2.2.4",
     "@heroicons/react": "2.2.0",
-    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-accordion": "1.2.11",
+    "@react-three/drei": "9.122.0",
+    "@react-three/fiber": "8.18.0",
+    "@react-three/postprocessing": "2.19.1",
     "@types/lodash": "4.17.17",
     "@types/pako": "2.0.3",
     "@vercel/kv": "3.0.0",
     "autoprefixer": "10.4.21",
     "clsx": "2.1.1",
-    "geist": "^1.4.2",
+    "geist": "1.4.2",
     "gif.js": "0.2.0",
     "immer": "^10.1.1",
+    "leva": "0.9.36",
     "lodash": "4.17.21",
-    "lucide-react": "0.511.0",
-    "next": "14.2.4",
+    "lucide-react": "0.456.0",
+    "next": "14.2.30",
     "pako": "2.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "simplex-noise": "^4.0.3",
-    "tailwind-merge": "3.3.0",
-    "tailwindcss": "3.4.17",
-    "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "simplex-noise": "4.0.3",
+    "tailwind-merge": "2.5.4",
+    "tailwindcss": "3.4.15",
+    "tailwindcss-animate": "1.0.7",
+    "three": "0.169.0",
+    "use-debounce": "10.0.5",
     "uuid": "11.1.0",
-    "zustand": "^5.0.5"
+    "zustand": "5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.0.0",
-    "@types/node": "20.11.19",
+    "@types/node": "22.9.0",
     "@types/react": "18.3.6",
-    "@types/react-dom": "18.2.14",
+    "@types/react-dom": "18.3.0",
+    "@types/three": "0.169.0",
     "@types/uuid": "10.0.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.4",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.0",
-    "prettier": "^3.5.3",
-    "typescript": "5.4.5"
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.30",
+    "husky": "9.1.6",
+    "lint-staged": "16.1.0",
+    "postcss": "8.4.49",
+    "prettier": "3.5.3",
+    "typescript": "5.6.3"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx,json,css,md}": "prettier --write"
+    "*.{js,jsx,ts,tsx,md,json}": [
+      "prettier --write"
+    ]
   }
 }
